# gtkrun

./: CMakeLists.txt  README  README.md  TODO.txt  config.h.in
gui/: CMakeLists.txt  entry.c  entry.h  gui.c  gui.h  listview.c  listview.h  treeview.c  treeview.h  window.c  window.h
main/: CMakeLists.txt  main.c
man/: CMakeLists.txt  gtkrun.1  gtkrun.1.in
path/: CMakeLists.txt  path.c  path.h
shared/: CMakeLists.txt  array.c  array.h  shared.c  shared.h
src/: CMakeLists.txt  grapplication.c  grapplication.h  grcommandlist.c  grcommandlist.h  grentry.c  grentry.h  grlist.c  grlist.h  grwindow.c  grwindow.h  main.c
